elasticsearch/modules/security_group/app.tf
resource "aws_security_group" "app" {
  name        = var.name_app_api
  description = "Default security group."
  vpc_id      = var.vpc_id
  tags = {
    Name = "${var.name_app_api}"
  }

  #aceess from vpc
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "TCP"
    cidr_blocks = ["${var.vpc_cidr}"]
  }
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "TCP"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
